--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 	    100% {color: black;  text-shadow: none;}
 	}
   </style>
+	  <srcipt src="https://www.unpkg.com/jquery@3.6.0/dist/jquery.min.js"></script>
 	   <script>
     var textStrip = ['诶', '比', '西', '迪', '伊', '吉', '艾', '杰', '开', '哦', '屁', '提', '维'];
 
